--- a/Doctors/app/build.gradle
+++ b/Doctors/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.afollestad.material-dialogs:core:0.8.6.1'
     compile 'com.afollestad.material-dialogs:commons:0.8.6.1'
+    compile 'com.google.android.gms:play-services-ads:10.2.6'
     testCompile 'junit:junit:4.12'
 }
 
