--- a/Doctors/app/build.gradle
+++ b/Doctors/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.afollestad.material-dialogs:core:0.8.6.1'
     compile 'com.afollestad.material-dialogs:commons:0.8.6.1'
+    compile 'com.jakewharton:butterknife:5.1.1'
+    compile 'com.heinrichreimersoftware:material-drawer:2.3.2'
     testCompile 'junit:junit:4.12'
 }
 
